2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincException.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IName.cs:
	* NameBase.cs:
	* HeadTail.cs:
	* ZincIdent.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* HeadTail.cs:
	* ZincData.cs:
	* ZincItem.cs:
	* ZincType.cs:
	* IZincItem.cs:
	* ZincModel.cs:
	* ZincIName.cs:
	* ZincIScope.cs:
	* ZincScalar.cs:
	* MiniZinc.bison:
	* ZincInstance.cs:
	* ZincEnumItem.cs:
	* ZincCompound.cs:
	* ZincNameBase.cs:
	* ZincFunction.cs:
	* ZincNamespace.cs:
	* ZincException.cs:
	* ZincPredicate.cs:
	* ZincScopeBase.cs:
	* ZincTotalOrder.cs:
	* ZincINamespace.cs:
	* MiniZincParser.cs:
	* ZincIdentifier.cs:
	* ZincVarDeclItem.cs:
	* ZincTypeInstance.cs:
	* ZincParseException.cs:
	* ZincGlobalVariable.cs: 

2013-09-17  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* MiniZinc.lex:
	* MiniZinc.bison:
	* MiniZincParser.cs: 

2013-09-17  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* MiniZinc.lex:
	* MiniZinc.bison: 

2013-09-17  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* MiniZinc.cs:
	* HeadTail.cs:
	* MiniZinc.lex:
	* MiniZinc.bison: 

2013-09-17  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* MiniZinc.cs:
	* MiniZinc.lex:
	* MiniZinc.bison: 

2013-09-17  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* MiniZinc.cs:
	* MiniZinc.lex:
	* SetLiteral.cs: 

2013-09-16  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* .gitignore:
	* MiniZinc.lex:
	* MiniZinc.bison:
	* CompilerVerbosity.cs: 

2013-09-02  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincType.cs:
	* MiniZinc.lex:
	* SetLiteral.cs:
	* FloatRange.cs:
	* MiniZinc.bison:
	* IntegerRange.cs:
	* ZincCompound.cs:
	* ZincTotalOrder.cs:
	* ZincTypeInstance.cs: 

2013-09-01  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincScope.cs:
	* ZincIScope.cs:
	* ZincNamespace.cs:
	* ZincScopeBase.cs:
	* ZincINamespace.cs: 

2013-09-01  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincItem.cs: